--- a/in-consistent-time-interval-for-a-measurement.Rmd
+++ b/in-consistent-time-interval-for-a-measurement.Rmd
@@ -4,20 +4,8 @@ The OptiRTC data is collect on real time. The inconsistent interval of the logge
 
 #### Loading Sample Data
 ```{r message=F,warning=F}
-# code from https://tonybreyal.wordpress.com/2011/11/24/source_https-sourcing-an-r-script-from-github/
-# for loading github code without SSL verification
-source_https <- function(url, ...) {
-  # load package
-  require(RCurl)
- 
-  # parse and evaluate each .R script
-  sapply(c(url, ...), function(u) {
-    eval(parse(text = getURL(u, followlocation = TRUE, cainfo = system.file("CurlSSL", "cacert.pem", package = "RCurl"))), envir = .GlobalEnv)
-  })
-}
-
-
-source_https("https://raw.githubusercontent.com/OptiRTC/export-analysis/ZyuAFD-patch-1/Data/Loading%20Sample%20Data.R?token=AKLn5qDAj4bxtrQ6mDc1_JLrD910hcKUks5aXjcTwA%3D%3D")
+library(devtools)
+source_url("https://raw.githubusercontent.com/OptiRTC/export-analysis/ZyuAFD-patch-1/Data/Loading%20Sample%20Data.R?token=AKLn5qDAj4bxtrQ6mDc1_JLrD910hcKUks5aXjcTwA%3D%3D")
 ```
 
 #### This code is a sample of aggregation of rain gauge data on Golda Meir data. 
