Update on cumulative aggregation on discrete data

--- a/Cumulative Aggregation for Discrete Information.ipynb
+++ b/Cumulative Aggregation for Discrete Information.ipynb
@@ -75,7 +75,7 @@
     "# Extract Rain information for analysis\n",
     "Rain_dt=GoldaMeir_Dt %>% select(Time,Inst_Rain) %>% filter(!is.na(Inst_Rain))\n",
     "\n",
-    "Rain_dt %>% head(10)%>% kable\n",
+    "Rain_dt %>% head(10)\n",
     "\n",
     "# Check duplicate time step\n",
     "\n",
@@ -83,8 +83,7 @@
     "    group_by(Time) %>% \n",
     "    tally %>% \n",
     "    filter(n>1) %>% \n",
-    "    arrange(-n) %>% \n",
-    "    kable"
+    "    arrange(-n)"
    ]
   },
   {
@@ -161,7 +160,7 @@
     "Rain_dt %<>% \n",
     "    mutate(Time_rnd=lubridate::floor_date(Time,Time_Intv))\n",
     "\n",
-    "Rain_dt %>% head%>% kable\n",
+    "Rain_dt %>% head\n",
     "\n",
     "# Check duplicate time on rounded time \n",
     "Rain_dt %>% \n",
@@ -169,15 +168,14 @@
     "    tally %>% \n",
     "    filter(n>1) %>% \n",
     "    arrange(-n)  %>% \n",
-    "    head %>% \n",
-    "    kable\n",
+    "    head \n",
     "\n",
     "# Aggregate the rain amount \n",
     "Rain_dt %<>% \n",
     "    group_by(Time_rnd) %>% \n",
     "    summarise(Inst_Rain=sum(Inst_Rain))\n",
     "\n",
-    "Rain_dt %>% head(10)%>% kable"
+    "Rain_dt %>% head(10)"
    ]
   },
   {
@@ -228,8 +226,7 @@
     "\n",
     "Rain_dt %>% \n",
     "    rename(Time=Time_rnd) %>% \n",
-    "    FindGaps(Tm_intv=Time_Intv) %>% \n",
-    "    kable"
+    "    FindGaps(Tm_intv=Time_Intv) "
    ]
   },
   {
@@ -383,8 +380,7 @@
     "           \n",
     "Rain_dt %>% \n",
     "    rename(Time=Time_rnd) %>% \n",
-    "    FindGaps(Tm_intv=Time_Intv) %>% \n",
-    "    kable\n",
+    "    FindGaps(Tm_intv=Time_Intv) \n",
     "\n",
     "# make complete time stamp dataset\n",
     "library(padr)\n",
